--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,17 @@
 
     <application
         android:allowBackup="true"
+
         android:icon="@drawable/store"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DuanPhonestore"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".User.Activity.ChatadminActivity"
+            android:exported="true"
+            android:parentActivityName=".User.MainActivity"/>
         <activity
             android:name=".User.Activity.XemAllSPMoinhatActivity"
             android:exported="true"
