--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
 
     <application
         android:allowBackup="true"
-
         android:icon="@drawable/store"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -17,38 +16,29 @@
         android:theme="@style/Theme.DuanPhonestore"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".User.Activity.ForgotPassActivity"
+            android:exported="true" />
+        <activity
             android:name=".User.Activity.ChatadminActivity"
-            android:exported="true"
-            />
+            android:exported="true" />
         <activity
             android:name=".User.Activity.OrderSuccesActivity"
-            android:exported="true"
-            >
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".User.Activity.XemAllSPMoinhatActivity"
-            android:exported="true"
-            />
+            android:exported="true" />
         <activity
             android:name=".User.Activity.ChangePasssUserActivity"
-            android:exported="true"
-            />
+            android:exported="true" />
         <activity
             android:name=".User.Activity.EditUserActivity"
-            android:exported="true"
-            />
+            android:exported="true" />
         <activity
             android:name=".User.Activity.ChitietTTdonhangActivity"
-            android:exported="true"
-             />
+            android:exported="true" />
         <activity
             android:name=".User.Activity.ChitietspActivity"
-            android:exported="true"
-          >
-
-        </activity>
-
+            android:exported="true"></activity>
         <activity android:name=".User.MainActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
