--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,9 @@
         <activity
             android:name=".User.Activity.ChitietspActivity"
             android:exported="true"></activity>
-        <activity android:name=".User.MainActivity" />
+        <activity android:name=".User.MainActivity" >
+
+        </activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".ManhinhChao">
