--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,10 +34,10 @@
             android:name=".User.Activity.EditUserActivity"
             android:exported="true" />
         <activity
-            android:name=".User.Activity.ChitietTTdonhangActivity"
-            android:exported="true" />
-        <activity
             android:name=".User.Activity.ChitietspActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".User.Activity.OrderDetailActyvity"
             android:exported="true"></activity>
         <activity android:name=".User.MainActivity" >
 
